剔除无用文件